# AI_TG_Bot

./: .env.sample  README.md  main.py  pyproject.toml  tables_db.py  tg_funcs.py
config/: config.py
src/: tables_db.py  tg_funcs.py
